# sem4_lab1

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  PolinomTable.cpp  experiments.cpp
include/: CMakeLists.txt
include/list/: THeadList.h  TList.h  TNode.h
include/polinom/: TMonom.h  TPolinom.h
include/stack/: Stack.h
include/table/: AllTables.h  ArraySortTable.h  ArrayTable.h  ListHashTable.h  ListTable.h  OpenAdressingHashTable.h  SimpleTable.h  TreeTable.h
src/: CMakeLists.txt
src/List/: CMakeLists.txt
src/Polinom/: CMakeLists.txt
src/Stack/: CMakeLists.txt
src/Table/: CMakeLists.txt  table.cpp
test/: CMakeLists.txt  test_main.cpp
test/basic/: CMakeLists.txt
test/polinom/: CMakeLists.txt
test/stack/: CMakeLists.txt
test/table/: CMakeLists.txt
